# p-arse

./: Cargo.toml  README.md
examples/: fasta.rs  hex_color.rs  ident.rs  json.rs
src/: any.rs  char.rs  debug.rs  error.rs  function.rs  lib.rs  literal.rs  main.rs  misc.rs  parser.rs  pattern.rs  sequence.rs  str.rs  utils.rs  wrapper.rs  wrappers.rs
tests/: tests.rs
