[package]
name = "p-arse"
authors = ["micouy <m.powierza@tutanota.com>"]
version = "0.0.1"
edition = "2018"
license = "GPL-3.0"
include = [
	"src/",
	"examples/",
	"tests/",
	"README.md",
	".gitignore",
	"Cargo.toml",
]
categories = ["parsing"]
keywords = ["parser", "parsing", "peg"]

[dependencies]
duple = "0.0.1"
